# CGxx

./: .gitignore  CG.cpp  CG.h  CMakeLists.txt  COPYING  Doxyfile  Matrix.cpp  Matrix.h  Preconditioner.cpp  Preconditioner.h  README.md  WorkDistribution.cpp  WorkDistribution.h  def.h
cmake/: FindOpenACC.cmake  FindOpenCL.cmake  FindOpenMPTarget.cmake  config-ix.cmake
cuda/: CGCUDA.cu  CGCUDABase.cu  CGCUDABase.h  CGMultiCUDA.cu  CGUnifiedCUDA.cu  CMakeLists.txt  kernel.cu  kernel.h  utils.h
openacc/: CGMultiOpenACC.cpp  CGOpenACC.cpp  CMakeLists.txt
opencl/: CGMultiOpenCL.cpp  CGOpenCL.cpp  CGOpenCLBase.cpp  CGOpenCLBase.h  CMakeLists.txt  clSVM.h.in  kernel.cl  utils.h
opencl/CL/: cl.h  cl_ext.h  cl_gl.h  cl_gl_ext.h  opencl.h
openmp/: CGMultiOpenMPTarget.cpp  CGOpenMP.cpp  CGOpenMPTarget.cpp  CMakeLists.txt
serial/: CMakeLists.txt  SerialCG.cpp
